# JetsonApp

./: .gitignore  CMakeLists.txt  README.md  inference.cpp  inference.hpp  main.cpp  postprocess.cu  postprocess.cuh  preprocess.cu  preprocess.cuh  video.mkv
models/: onnx2trt.sh  requirements.txt
